Minimal changes to bring Ripple up to date with Sesame 4.